# thermogram-rs

./: Cargo.toml  HARDENING_SUMMARY.md  PERFORMANCE.md  README.md  benchmark_results.txt
benches/: core_operations.rs
engineering/: 20260104-152558-thermogram-colony-architecture---living-knowledge-.md  20260104-160320-thermogram-hardening---production-ready-plastic-me.md  TEMPLATE.md
scripts/: eng_log.py
src/: codec.rs  colony.rs  consolidation.rs  core.rs  delta.rs  distillation.rs  embedded_snn.rs  error.rs  export.rs  hash_chain.rs  lib.rs  plasticity.rs  plasticity_engine.rs  ternary.rs
tests/: adversarial.rs  concurrency.rs
