[package]
name = "thermogram"
version = "0.1.0"
edition = "2021"
authors = ["Blackfall Labs"]
license = "MIT OR Apache-2.0"
description = "Plastic memory capsule with dirty/clean states, rule-governed deltas, and hash-chained auditability"
repository = "https://github.com/blackfall-labs/thermogram-rs"
keywords = ["memory", "plasticity", "knowledge", "archive", "audit"]
categories = ["data-structures", "science"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
zstd = "0.13"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Optional: Engram integration
engram = { package = "engram-rs", path = "../engram-rs", optional = true }

[features]
default = []
engram-export = ["engram"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[lib]
name = "thermogram"
path = "src/lib.rs"
